compile_fail_tests/struct_duplicate_field.stderr
error[E0025]: field `value` bound multiple times in the pattern
 --> compile_fail_tests/struct_duplicate_field.rs:9:9
  |
9 |         const_destructure!(let Wrap { value: v1, value: v2 } = self);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         |
  |         multiple uses of `value` in pattern
  |         first use of `value`
  |
  = note: this error originates in the macro `$crate::const_destructure` which comes from the expansion of the macro `const_destructure` (in Nightly builds, run with -Z macro-backtrace for more info)
